# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# setuptools: https://setuptools.pypa.io/en/latest/userguide/quickstart.html#entry-points-and-automatic-script-creation
# pipx: https://pipx.pypa.io/stable/how-pipx-works/

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radiantkit"
dynamic = ["version"] # reads from radiantkit/__init__.py
description = "Radial Image Analysis Toolkit"
authors = [{name = "Gabriele Girelli"}, {name = "Erik Wernersson"},]
license = {text="MIT license"}
readme = "README.md"
keywords = ["microscopy", "image", "analysis", "bioimaging", "nucleus", "segmentation", "conversion"]
classifiers = [
"Development Status :: 4 - Beta",
"Environment :: Console",
"Intended Audience :: Science/Research",
"Topic :: Scientific/Engineering :: Bio-Informatics",
"Operating System :: Unix",
"Operating System :: POSIX :: Linux",
]
requires-python = ">3.12"

dependencies = [
"scikit-image>=0.19",
"numpy>=1.20",
"pandas>=1.1",
"plotly>=4.13",
"tifffile>=2020",
"joblib>=0.16",
"czifile>=2019.7.2",
"nd2reader>=3.3",
"pims>=0.5",
"rich>=13",
]

[tool.setuptools]
packages=['radiantkit', 'radiantkit.scripts']

[tool.setuptools.dynamic]
version = {attr = "radiantkit.__version__"}

[project.scripts]
radiantkit = "radiantkit.run:radiant"
